Feat: Implement full functional frontend with React and Vite
- Created Core UI components (Navbar, AuthContext, Book Management).
- Integrated Axios for backend communication.
- Configured Vite Proxy to resolve CORS and endpoint mapping.
- Implemented JWT-based authentication flow on client-side.
- Fixed React 17+ auto-import issues via esbuild configuration.
- Verified stable local environment with MySQL connection.