@@ -2,7 +2,6 @@ package com.rbb.bookshelf.rating;
 
 import com.rbb.bookshelf.book.Book;
 import com.rbb.bookshelf.book.BookRepository;
-import com.rbb.bookshelf.common.NotFoundException;
 import com.rbb.bookshelf.rating.dto.RatingResponse;
 import com.rbb.bookshelf.rating.dto.RatingSummaryResponse;
 import com.rbb.bookshelf.user.User;
@@ -10,7 +9,9 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,6 +27,8 @@ public class RatingService {
                 .comment(r.getComment())
                 .ratedAt(r.getRatedAt())
                 .bookId(r.getBook().getId())
+                .bookTitle(r.getBook().getTitle())      // <-- YENİ
+                .bookCoverUrl(r.getBook().getCoverUrl())// <-- YENİ
                 .userId(r.getUser().getId())
                 .username(r.getUser().getUsername())
                 .build();
@@ -33,7 +36,7 @@ public class RatingService {
 
     public RatingResponse rate(User user, Long bookId, int score, String comment) {
         Book book = bookRepository.findById(bookId)
-                .orElseThrow(() -> new NotFoundException("Book not found"));
+                .orElseThrow(() -> new RuntimeException("Kitap bulunamadı"));
 
         try {
             Rating r = Rating.builder()
@@ -41,52 +44,51 @@ public class RatingService {
                     .book(book)
                     .score(score)
                     .comment(comment)
+                    .ratedAt(LocalDateTime.now())
                     .build();
             return toResponse(ratingRepository.save(r));
         } catch (DataIntegrityViolationException e) {
-            // uq_ratings_user_book (duplicate)
-            throw new IllegalArgumentException("You already rated this book");
+            throw new RuntimeException("Bu kitabı zaten oyladınız!");
         }
     }
 
     public List<RatingResponse> listForBook(Long bookId) {
-        return ratingRepository.findAllByBookId(bookId).stream().map(this::toResponse).toList();
+        return ratingRepository.findAllByBookId(bookId).stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
     }
 
     public RatingResponse myRating(Long userId, Long bookId) {
         Rating r = ratingRepository.findByUserIdAndBookId(userId, bookId)
-                .orElseThrow(() -> new NotFoundException("Rating not found"));
+                .orElseThrow(() -> new RuntimeException("Henüz oylamadınız."));
         return toResponse(r);
     }
 
     public RatingResponse updateMyRating(Long userId, Long bookId, Integer score, String comment) {
         Rating r = ratingRepository.findByUserIdAndBookId(userId, bookId)
-                .orElseThrow(() -> new NotFoundException("Rating not found"));
+                .orElseThrow(() -> new RuntimeException("Oylama bulunamadı."));
 
         if (score != null) r.setScore(score);
         if (comment != null) r.setComment(comment);
+        r.setRatedAt(LocalDateTime.now()); // Güncellenme tarihi
 
         return toResponse(ratingRepository.save(r));
     }
 
     public void deleteMyRating(Long userId, Long bookId) {
         Rating r = ratingRepository.findByUserIdAndBookId(userId, bookId)
-                .orElseThrow(() -> new NotFoundException("Rating not found"));
+                .orElseThrow(() -> new RuntimeException("Oylama bulunamadı."));
         ratingRepository.delete(r);
     }
 
     public RatingSummaryResponse summary(Long bookId) {
-        Object[] row = ratingRepository.summary(bookId).stream().findFirst().orElse(null);
-
-        // native query bazen nested array doner: [ [cnt, avg] ]
-        if (row != null && row.length == 1 && row[0] instanceof Object[]) {
-            row = (Object[]) row[0];
-        }
+        List<Object[]> result = ratingRepository.summary(bookId);
+        Object[] row = result.stream().findFirst().orElse(null);
 
         long count = 0L;
-        Double avg = null;
+        Double avg = 0.0;
 
-        if (row != null && row.length >= 2) {
+        if (row != null) {
             if (row[0] != null) count = ((Number) row[0]).longValue();
             if (row[1] != null) avg = ((Number) row[1]).doubleValue();
         }
@@ -98,5 +100,9 @@ public class RatingService {
                 .build();
     }
 
-
+    public List<RatingResponse> getMyAllRatings(Long userId) {
+        return ratingRepository.findAllByUserId(userId).stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
+    }
 }
